# story-creator

./: .gitignore  README.md  dev.sh  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
apps/backend/: .env  README.md  pyproject.toml  start.sh
apps/backend/app/: agent.py  main.py  utils.py
apps/frontend/: README.md  index.html  package.json  vite.config.js
apps/frontend/src/: App.jsx  index.css  main.jsx
convex/: schema.ts  stories.ts  tsconfig.json
convex/_generated/: api.d.ts
docs/: README.md  agent-pipeline.d2  architecture.d2
