[project]
name = "story-creator-backend"
version = "0.1.0"
description = "FastAPI backend for Story Creator Bedtime Story Application"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "google-adk>=0.5.0",
    "google-genai>=0.1.0",
    "gtts>=2.3.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0"
]
requires-python = ">=3.10"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
